--- a/shakespeare.css
+++ b/shakespeare.css
@@ -66,3 +66,19 @@ table {
     background-color: #dddddd; 
   }
   
+  .name:hover {
+    text-shadow: 2px 2px 8px rgba(255, 0, 0, 0.6);
+    border: 2px solid #f00;
+  }
+  
+  
+.speech:hover {
+    
+    text-shadow: 2px 2px 10px rgba(255, 69, 0, 0.7); 
+    
+    
+    border: 2px solid #ff4500;
+    padding: 3px; 
+    border-radius: 5px; 
+  }
+  
